// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecules/TextLink passes the snapshot test for basic setup 1`] = `
<View
  accessibilityHint=""
  accessibilityLabel="Text Link press"
  accessibilityRole="button"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  onLayout={[Function]}
  style={
    Object {
      "alignSelf": undefined,
      "borderRadius": undefined,
      "bottom": undefined,
      "display": "flex",
      "elevation": undefined,
      "end": undefined,
      "left": undefined,
      "margin": undefined,
      "marginBottom": undefined,
      "marginEnd": undefined,
      "marginHorizontal": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginStart": undefined,
      "marginTop": undefined,
      "marginVertical": undefined,
      "position": undefined,
      "right": undefined,
      "shadowColor": undefined,
      "shadowOffset": undefined,
      "shadowOpacity": undefined,
      "shadowRadius": undefined,
      "start": undefined,
      "top": undefined,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "borderRadius": undefined,
        "display": "flex",
        "overflow": "hidden",
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "display": "flex",
            "opacity": 1,
          },
          Object {
            "backgroundColor": undefined,
            "borderBottomColor": undefined,
            "borderBottomWidth": undefined,
            "borderColor": undefined,
            "borderEndColor": undefined,
            "borderEndWidth": undefined,
            "borderLeftColor": undefined,
            "borderLeftWidth": undefined,
            "borderRightColor": undefined,
            "borderRightWidth": undefined,
            "borderStartColor": undefined,
            "borderStartWidth": undefined,
            "borderStyle": undefined,
            "borderTopColor": undefined,
            "borderTopWidth": undefined,
            "borderWidth": undefined,
            "opacity": 1,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        scaleFontSize={true}
        style={
          Object {
            "color": "#6A7BFF",
            "display": "flex",
            "fontFamily": "Poppins-Medium",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "lineHeight": 22,
          }
        }
        variant="btn2"
      >
        Text Link press
      </Text>
    </View>
  </View>
</View>
`;

exports[`Molecules/TextLink passes the snapshot test for different color schemes 1`] = `
Array [
  <View
    accessibilityHint=""
    accessibilityLabel="Primary text link"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": undefined,
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": undefined,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "display": "flex",
              "opacity": 1,
            },
            Object {
              "backgroundColor": undefined,
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          scaleFontSize={true}
          style={
            Object {
              "color": "#6A7BFF",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 16.099999999999998,
              "fontStyle": "normal",
              "fontWeight": "500",
              "includeFontPadding": false,
              "lineHeight": 22,
            }
          }
          variant="btn2"
        >
          Primary text link
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityHint=""
    accessibilityLabel="Secondary text link"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": undefined,
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": undefined,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "display": "flex",
              "opacity": 1,
            },
            Object {
              "backgroundColor": undefined,
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          scaleFontSize={true}
          style={
            Object {
              "color": "#FF6AC6",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 16.099999999999998,
              "fontStyle": "normal",
              "fontWeight": "500",
              "includeFontPadding": false,
              "lineHeight": 22,
            }
          }
          variant="btn2"
        >
          Secondary text link
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`Molecules/TextLink passes the snapshot test for different sizes 1`] = `
Array [
  <View
    accessibilityHint=""
    accessibilityLabel="Text Link press"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": undefined,
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": undefined,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        size="xs"
        style={
          Array [
            Object {
              "display": "flex",
              "opacity": 1,
            },
            Object {
              "backgroundColor": undefined,
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          scaleFontSize={true}
          style={
            Object {
              "color": "#6A7BFF",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 11.5,
              "fontStyle": "normal",
              "fontWeight": "500",
              "includeFontPadding": false,
              "lineHeight": 16,
            }
          }
          variant="btn4"
        >
          Text Link press
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityHint=""
    accessibilityLabel="Text Link press"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": undefined,
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": undefined,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        size="s"
        style={
          Array [
            Object {
              "display": "flex",
              "opacity": 1,
            },
            Object {
              "backgroundColor": undefined,
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          scaleFontSize={true}
          style={
            Object {
              "color": "#6A7BFF",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 13.799999999999999,
              "fontStyle": "normal",
              "fontWeight": "500",
              "includeFontPadding": false,
              "lineHeight": 20,
            }
          }
          variant="btn3"
        >
          Text Link press
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityHint=""
    accessibilityLabel="Text Link press"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": undefined,
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": undefined,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        size="m"
        style={
          Array [
            Object {
              "display": "flex",
              "opacity": 1,
            },
            Object {
              "backgroundColor": undefined,
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          scaleFontSize={true}
          style={
            Object {
              "color": "#6A7BFF",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 16.099999999999998,
              "fontStyle": "normal",
              "fontWeight": "500",
              "includeFontPadding": false,
              "lineHeight": 22,
            }
          }
          variant="btn2"
        >
          Text Link press
        </Text>
      </View>
    </View>
  </View>,
  <View
    accessibilityHint=""
    accessibilityLabel="Text Link press"
    accessibilityRole="button"
    accessibilityState={
      Object {
        "disabled": false,
      }
    }
    accessible={true}
    onLayout={[Function]}
    style={
      Object {
        "alignSelf": undefined,
        "borderRadius": undefined,
        "bottom": undefined,
        "display": "flex",
        "elevation": undefined,
        "end": undefined,
        "left": undefined,
        "margin": undefined,
        "marginBottom": undefined,
        "marginEnd": undefined,
        "marginHorizontal": undefined,
        "marginLeft": undefined,
        "marginRight": undefined,
        "marginStart": undefined,
        "marginTop": undefined,
        "marginVertical": undefined,
        "position": undefined,
        "right": undefined,
        "shadowColor": undefined,
        "shadowOffset": undefined,
        "shadowOpacity": undefined,
        "shadowRadius": undefined,
        "start": undefined,
        "top": undefined,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        Object {
          "borderRadius": undefined,
          "display": "flex",
          "overflow": "hidden",
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        size="l"
        style={
          Array [
            Object {
              "display": "flex",
              "opacity": 1,
            },
            Object {
              "backgroundColor": undefined,
              "borderBottomColor": undefined,
              "borderBottomWidth": undefined,
              "borderColor": undefined,
              "borderEndColor": undefined,
              "borderEndWidth": undefined,
              "borderLeftColor": undefined,
              "borderLeftWidth": undefined,
              "borderRightColor": undefined,
              "borderRightWidth": undefined,
              "borderStartColor": undefined,
              "borderStartWidth": undefined,
              "borderStyle": undefined,
              "borderTopColor": undefined,
              "borderTopWidth": undefined,
              "borderWidth": undefined,
              "opacity": 1,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          accessible={true}
          allowFontScaling={true}
          scaleFontSize={true}
          style={
            Object {
              "color": "#6A7BFF",
              "display": "flex",
              "fontFamily": "Poppins-Medium",
              "fontSize": 18.4,
              "fontStyle": "normal",
              "fontWeight": "500",
              "includeFontPadding": false,
              "lineHeight": 26,
            }
          }
          variant="btn1"
        >
          Text Link press
        </Text>
      </View>
    </View>
  </View>,
]
`;

exports[`Molecules/TextLink passes the snapshot test when using style props 1`] = `
<View
  accessibilityHint=""
  accessibilityLabel="Text link press"
  accessibilityRole="button"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  onLayout={[Function]}
  style={
    Object {
      "alignSelf": undefined,
      "borderRadius": undefined,
      "bottom": undefined,
      "display": "flex",
      "elevation": undefined,
      "end": undefined,
      "left": undefined,
      "margin": undefined,
      "marginBottom": undefined,
      "marginEnd": undefined,
      "marginHorizontal": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginStart": undefined,
      "marginTop": undefined,
      "marginVertical": undefined,
      "position": undefined,
      "right": undefined,
      "shadowColor": undefined,
      "shadowOffset": undefined,
      "shadowOpacity": undefined,
      "shadowRadius": undefined,
      "start": undefined,
      "top": undefined,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "borderRadius": undefined,
        "display": "flex",
        "overflow": "hidden",
      }
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "#6A7BFF",
            "display": "flex",
            "opacity": 1,
          },
          Object {
            "backgroundColor": "#6A7BFF",
            "borderBottomColor": undefined,
            "borderBottomWidth": undefined,
            "borderColor": "#C5CEE0",
            "borderEndColor": undefined,
            "borderEndWidth": undefined,
            "borderLeftColor": undefined,
            "borderLeftWidth": undefined,
            "borderRightColor": undefined,
            "borderRightWidth": undefined,
            "borderStartColor": undefined,
            "borderStartWidth": undefined,
            "borderStyle": undefined,
            "borderTopColor": undefined,
            "borderTopWidth": undefined,
            "borderWidth": 2,
            "opacity": 1,
          },
        ]
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        scaleFontSize={true}
        style={
          Object {
            "color": "#6A7BFF",
            "display": "flex",
            "fontFamily": "Poppins-Medium",
            "fontSize": 16.099999999999998,
            "fontStyle": "normal",
            "fontWeight": "500",
            "includeFontPadding": false,
            "lineHeight": 22,
          }
        }
        variant="btn2"
      >
        Text link press
      </Text>
    </View>
  </View>
</View>
`;
